{
    "name": "MyInputManager",
    "maps": [
        {
            "name": "PlayerController",
            "id": "d9ff5472-3780-4aae-93dd-cafcadb10056",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a2af3a10-e6f7-4f32-92a2-3b2f09793b9f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "15edd056-3394-43fa-a6e5-84eaf5200f74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "71808b2d-3f90-404b-a915-bf603d8594de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "07f7867e-70fd-4fbe-b87b-b4241464d4e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "ccc250e1-c592-4270-93d2-d04606aefbdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASDKeys",
                    "id": "f2f4b2e0-0f56-4799-81e9-601036f953e7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "73a0d781-e5c7-4ce0-98d0-6bc0ef60e420",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b27d7e3f-fa63-4ae7-8041-111687cbef26",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "20b43d66-b607-4b1c-83c0-4fe98461f822",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7b71e853-5b7f-4984-98e0-a5d93156fa44",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d981aed0-1d43-4472-b280-aa67f6df8e7f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fa64386-4518-4692-89f7-b03993ed4c70",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "683b5f3f-7f6a-4b26-bd9c-ccc5f9a090a5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92fa32ae-a482-4ffb-836f-dbe87aa93ebf",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}